2010-02-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit tests for bug #13430: Cannot parse INSERT when VALUES has no space before left parenthesis

2010-02-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13422: Invalid quoting of numeric column names

2010-02-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit tests for bug #13412: BETWEEN operator is not supported

2010-01-24  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13090: version warning with CSS styled content

2010-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13199: fileadminDir is hardcoded in several places (Thanks to Susanne Moog)

2010-01-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated copyright year

2010-01-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13134: Support of SQL LOCATE function

2010-01-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13135: Support for CASE WHEN flow control

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.0

2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12603: sql_query does not respect "mapping"
	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement

2009-12-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated documentation: now using new documentation template
	* Updated documentation: removed obsolete information, added small cookbook for extension developers, added tutorials for Oracle and PostgreSQL

2009-12-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13003: Move back methods belonging to t3lib_sqlparser

2009-12-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12897: Cannot parse SQL hints

2009-11-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12758: Added support for EXISTS (subquery)

2009-11-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.0.2 [TYPO3 4.3.0]