@@ -1,3 +1,7 @@
+2010-02-07  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Added feature #13209: MySQL extended INSERT statements cannot be parsed
+
 2010-02-06  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Added unit tests for bug #13430: Cannot parse INSERT when VALUES has no space before left parenthesis
